* Fixed issue when reply user dialog was in dark color in dark theme (invisible), #114 * Fixed issue when guest inputs (name, email, website) were white in dark theme

--- a/reactjs/src/scss/comments.scss
+++ b/reactjs/src/scss/comments.scss
@@ -20,6 +20,8 @@ $global-radius: 4px;
 $attachment-color: #eee;
 $attachment-background-color: #eee;
 
+$input-background-color: #fff;
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
@@ -324,7 +326,7 @@ $attachment-background-color: #eee;
         }
 
         &__textfield {
-          background-color: #fff;
+          background-color: $input-background-color;
           border: 0 !important;
           outline: 0 !important;
           font-size: $font-size;
@@ -505,12 +507,12 @@ $attachment-background-color: #eee;
           input[type="text"],
           input[type="email"],
           input[type="number"] {
+            background-color: $input-background-color;
             border: 1px solid $semi-hidden-color !important;
             color: $comment-color !important;
             outline: 0;
             height: 31px !important;
             line-height: 31px !important;
-            background-color: #fff;
             padding: 0 5px !important;
             font-size: 11px;
             text-align: left;
