--- a/reactjs/src/scss/theme-dark.scss
+++ b/reactjs/src/scss/theme-dark.scss
@@ -10,7 +10,15 @@ $btn-primary-active-color: #4f9f49;
 $attachment-color: #eee;
 $attachment-background-color: #eee;
 
+$input-background-color: #3f3f3f;
+
 #anycomment-root {
+
+  label,
+  a {
+    color: $semi-hidden-color;
+  }
+
   .anycomment-dark {
     .anycomment-send-comment {
       &-supheader {
@@ -45,6 +53,10 @@ $attachment-background-color: #eee;
       }
 
       &-body {
+        &-reply {
+          color: $comment-color;
+        }
+
         &-outliner {
           border: 0;
 
@@ -55,7 +67,7 @@ $attachment-background-color: #eee;
           }
 
           &__textfield {
-            background-color: #3f3f3f;
+            background-color: $input-background-color;
             color: #fff;
           }
         }
@@ -64,8 +76,6 @@ $attachment-background-color: #eee;
           &__container {
             .anycomment-form-submit {
               &__user-agreement {
-                color: $semi-hidden-color;
-
                 /* On mouse-over, add a grey background color */
                 &:hover input ~ .checkmark {
                   background-color: darken(#686868, 2%);
@@ -94,18 +104,25 @@ $attachment-background-color: #eee;
             input[type="text"],
             input[type="email"],
             input[type="number"] {
+              background-color: $input-background-color;
               border: 1px solid $semi-hidden-color !important;
               color: $comment-color !important;
 
+              &,
               &:hover,
               &:active,
               &:focus {
-                border: 1px solid darken($semi-hidden-color, 5%) !important;
+                border: 0 solid transparent !important;
               }
             }
           }
         }
       }
+    }
+
+    // Footer
+    .anycomment-copy-footer {
+      border-top: 2px solid #e4e2e7;
     }
 
     .anycomment-list {
